--- a/deploy/docker/microservices/Dockerfile.analytics
+++ b/deploy/docker/microservices/Dockerfile.analytics
@@ -1,11 +1,20 @@
-# File: deploy/docker/microservices/Dockerfile.analytics
 FROM python:3.11-slim
+
 WORKDIR /app
+
+# Copy requirements and install
 COPY microservices_http/analytics_service/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy shared modules
 COPY common /app/common
 COPY persistence /app/persistence
-COPY microservices_http/analytics_service /app
+
+# Copy service code
+COPY microservices_http/analytics_service/app.py /app/
+
 ENV PYTHONPATH=/app
+
 EXPOSE 8002
+
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8002"]
