--- a/deploy/docker/microservices/Dockerfile.gateway
+++ b/deploy/docker/microservices/Dockerfile.gateway
@@ -1,11 +1,19 @@
-# File: deploy/docker/microservices/Dockerfile.gateway
 FROM python:3.11-slim
+
 WORKDIR /app
+
+# Copy requirements and install
 COPY microservices_http/api_gateway/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy shared modules
 COPY common /app/common
-COPY persistence /app/persistence
-COPY microservices_http/api_gateway /app
+
+# Copy service code
+COPY microservices_http/api_gateway/app.py /app/
+
 ENV PYTHONPATH=/app
+
 EXPOSE 8080
+
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
