--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -1,30 +1,98 @@
+# events {
+#     worker_connections 1024;
+# }
+
+# http {
+#     upstream grpc_backend {
+#         server layered-app:50051;
+#     }
+
+#     server {
+#         listen 8081 http2;
+        
+#         location / {
+#             grpc_pass grpc://grpc_backend;
+#             grpc_set_header Host $host;
+#             grpc_set_header X-Real-IP $remote_addr;
+            
+#             error_page 502 = /error502grpc;
+#             default_type application/grpc;
+#         }
+
+#         location = /error502grpc {
+#             internal;
+#             default_type application/grpc;
+#             add_header grpc-status 14;
+#             add_header grpc-message "unavailable";
+#             return 204;
+#         }
+#     }
+# }
+
+//new nginx.conf for raft rate limit service
 events {
     worker_connections 1024;
 }
 
 http {
-    upstream grpc_backend {
-        server layered-app:50051;
+    upstream raft_cluster {
+        least_conn;
+        server raft-ratelimit-1:8001 max_fails=3 fail_timeout=10s;
+        server raft-ratelimit-2:8002 max_fails=3 fail_timeout=10s;
+        server raft-ratelimit-3:8003 max_fails=3 fail_timeout=10s;
+        server raft-ratelimit-4:8004 max_fails=3 fail_timeout=10s;
+        server raft-ratelimit-5:8005 max_fails=3 fail_timeout=10s;
     }
 
     server {
-        listen 8081 http2;
-        
-        location / {
-            grpc_pass grpc://grpc_backend;
-            grpc_set_header Host $host;
-            grpc_set_header X-Real-IP $remote_addr;
-            
-            error_page 502 = /error502grpc;
-            default_type application/grpc;
+        listen 8080;
+        server_name _;
+
+        access_log /var/log/nginx/raft_access.log;
+        error_log /var/log/nginx/raft_error.log;
+
+        location /healthz {
+            proxy_pass http://raft_cluster/healthz;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_connect_timeout 2s;
+            proxy_send_timeout 2s;
+            proxy_read_timeout 2s;
         }
 
-        location = /error502grpc {
-            internal;
-            default_type application/grpc;
-            add_header grpc-status 14;
-            add_header grpc-message "unavailable";
-            return 204;
+        location /check {
+            proxy_pass http://raft_cluster/check;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 5s;
+            proxy_read_timeout 5s;
+            proxy_intercept_errors off;
+        }
+
+        location /raft/status {
+            proxy_pass http://raft_cluster/raft/status;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+        }
+
+        location /operation {
+            proxy_pass http://raft_cluster/operation;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location / {
+            return 404 "Raft Rate Limit Service - Use /check endpoint";
         }
     }
 }
