--- a/microservices_http/ratelimit_service/requirements.txt
+++ b/microservices_http/ratelimit_service/requirements.txt
@@ -3,6 +3,6 @@ uvicorn[standard]==0.30.6
 httpx==0.27.2
 pydantic==2.9.2
 redis==5.0.8
-grpcio==1.66.1
-grpcio-tools==1.66.1
-protobuf==5.28.2
+grpcio
+grpcio-tools
+protobuf
